Disable XUL progress dialog and fix print progress listener. b=168510 r=rods@netscape.com sr=rpotts@netscape.com